fixes spacing on various pages

--- a/css/main.css
+++ b/css/main.css
@@ -64,14 +64,20 @@ html {
 /* sets style for button in header
 colours, border, uppercase, spacing, alignment */
 .order {
-    background-color: #DBC349;
+    background-color: #DFC3A7;
     color: white;
     border: none;
     text-transform: uppercase;
     padding: 15px;
     border-radius: 10px;
     margin: 10px;
-    float: right;
+    position: absolute;
+    right: 2%;
+    transition: transform 1s;
+}
+
+.order:hover {
+    transform: scale(1.25);
 }
 
 /* hides site title in header from site as the logo shows the title */
@@ -105,7 +111,7 @@ header {
 
 /* sets background colour of navigation bar */
 nav {
-    background-color: #dbc349;
+    background-color: #DFC3A7;
 }
 
 /* formats section with slogan to center content, set background and text colour */
@@ -115,6 +121,12 @@ nav {
     align-content: center;
     background-color: #344739;
     color: white;
+    padding: 30px;
+    font-size: 4rem;
+}
+
+.style {
+    font-family: 'Style Script', cursive;
 }
 
 /* formats footer with text and background colour */
@@ -146,6 +158,7 @@ ul {
 /* formats footer section by setting as flex and altering spacing */
 .footerwpic {
     display: flex;
+    flex-direction: column;
     padding: 10px;
 }
 
@@ -155,12 +168,39 @@ ul {
     flex-direction: column;
     justify-content: center;
     padding: 10px;
+    line-height: 25px;
 }
 
+.copy {
+    padding-top: 25px;
+}
 
 .footerlogo {
-    width: 25%;
+    width: 50%;
+    margin: auto;
 }
+
+
+/* MEDIUM VIEWPORT*/
+@media screen and (min-width: 641px) and (max-width: 1007px) {
+   /* formats footer section by setting as flex and altering spacing */
+.footerwpic {
+    display: flex;
+    padding: 10px;
+} 
+}
+
+
+
+/* LARGE VIEWPORT */
+@media screen and (min-width: 1008px) {
+   /* formats footer section by setting as flex and altering spacing */
+.footerwpic {
+    display: flex;
+    padding: 10px;
+} 
+}
+
 
 /* //////////////////////////////////////////////////////////////////////////////////
 INDEX
@@ -172,23 +212,38 @@ INDEX
     margin: auto;
 }
 
-/* sets width of images with the class of carousel to 15% */
+/* sets width of images with the class of carousel to 95% */
 .carousel {
-    width: 15%;
+    width: 95%;
+    max-width: 640px;
+    margin: auto;
+    border-radius: 50%;
+    max-height: 450px;
+}
+
+.coffee-croissant {
+    max-width: 640px;
+}
+
+.waffle-cupcake {
+    max-width: 640px;
 }
 
 /* centers how am i feeling section */
 .feeling {
     display: flex;
     justify-content: center;
+    padding: 20px;
+    font-size: 2rem;
 }
 
 /* sets section of moods to flex, adjusts spacing of content, sets background colour */
 .mood {
     display: flex;
     padding: 10px;
-    justify-content: space-between;
+    flex-direction: column;
     background-color: #D1DCDA;
+    width: 100%;
 }
 
 /* sets flavour section to flex and centers content */
@@ -213,18 +268,78 @@ INDEX
     display: flex;
     justify-content: space-evenly;
 }
-
+/* 
 .information {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    display: flex;
     width: 100%;
-    grid-template-areas: 
-    "baker baker info1 coffee-croissant"
-    "baker baker waffle-cupcake info2";
 }
 
-.baker {
+
+.grandchild {
+    width: 50%;
+}
+
+.info1 {
+    width: 25%;
+}
+
+.coffee-croissant {
+    width: 25%;
+} */
+
+
+/* MEDIUM VIEWPORT*/
+@media screen and (min-width: 641px) and (max-width: 1007px) {
+    
+}
+
+
+
+/* LARGE VIEWPORT */
+@media screen and (min-width: 1008px) {
+    .information {
+        display: flex;
+        width: 95%;
+    }
+
+    .grandchild {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .fit {
+        width: 50%;
+    }
+
+  .info1 {
+    display: flex;
+  }
+
+  .info2 {
+    display: flex;
+  }
+    /* .information {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        width: 100%;
+        grid-template-areas: 
+        "baker baker info1 coffee-croissant"
+        "baker baker waffle-cupcake info2";
+    } */
+    /* sets section of moods to flex, adjusts spacing of content, sets background colour */
+.mood {
+    display: flex;
+    padding: 10px;
+    justify-content: space-between;
+    background-color: #D1DCDA;
+}
+/* sets width of images with the class of carousel to 15% */
+.carousel {
+    width: 15%;
+}
+
+/* .baker {
     grid-area: baker;
     width: 50%;
 }
@@ -246,22 +361,19 @@ INDEX
 
 .waffle-cupcake {
     grid-area: waffle-cupcake;
-    width: 25%;
-}
-/* SMALL VIEWPORT */
-
-/* MEDIUM VIEWPORT*/
-
-/* LARGE VIEWPORT */
-
+    width: 25%; */
+/* }
+} */
 
 
 /* //////////////////////////////////////////////////////////////////////////////////
 PRODUCTS
 /////////////////////////////////////////////////////////////////////////////////// */
 
+
 .products {
     width: 100%;
+    border-radius: 50%;
 }
 
 .ourproducts {
@@ -274,22 +386,38 @@ PRODUCTS
     margin: auto;
 }
 
-/* SMALL VIEWPORT */
-
+/* 
 /* MEDIUM VIEWPORT*/
+@media screen and (min-width: 641px) and (max-width: 1007px) {
+    
+}
+
+
 
 /* LARGE VIEWPORT */
+@media screen and (min-width: 1008px) {
+    
+} */
 
 /* //////////////////////////////////////////////////////////////////////////////////
 ABOUT
 /////////////////////////////////////////////////////////////////////////////////// */
 
-
-/* SMALL VIEWPORT */
+.about {
+    line-height: 200px;
+}
 
 /* MEDIUM VIEWPORT*/
+@media screen and (min-width: 641px) and (max-width: 1007px) {
+    
+}
+
+
 
 /* LARGE VIEWPORT */
+@media screen and (min-width: 1008px) {
+    
+}
 
 /* //////////////////////////////////////////////////////////////////////////////////
 ORDER
@@ -300,12 +428,17 @@ form {
     flex-direction: column;
 }
 
-/* SMALL VIEWPORT */
-
 /* MEDIUM VIEWPORT*/
+@media screen and (min-width: 641px) and (max-width: 1007px) {
+    
+}
+
+
 
 /* LARGE VIEWPORT */
-
+@media screen and (min-width: 1008px) {
+    
+}
 
 
 
